# cvtest

./: Installation of OpenCV  Installation of PCL
2tugs1close1far/: autohist.py  comb1.py
2tugsequal/: threshold.py
3dimg.d/: RD  readisp.cpp  threshold.py
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  auto  autothresh_combination.cpp  canny  canny.cpp  cannymorph  cannymorph.cpp  cmake_install.cmake  combination  combination.cpp  hist  hist.cpp  show2  show2pictures.cpp  threshold  threshold.cpp
python/: blue.py  hist.py  masking.py  opencvMakefile  test.py  test2.py
python/2tugsequal/: autohist.py  comb2.py
python/3dimg.d/: Makefile  comb1.py  edges.py  masking2.py
