cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
#add_executable( hist hist.cpp )
#add_executable( cannymorph cannymorph.cpp )
#add_executable( threshold threshold.cpp )
#add_executable( show2 show2pictures.cpp )
#add_executable( combination combination.cpp )
add_executable( auto autothresh_combination.cpp )
#target_link_libraries( hist ${OpenCV_LIBS} )
#target_link_libraries( cannymorph ${OpenCV_LIBS} )
#target_link_libraries( threshold ${OpenCV_LIBS} )
#target_link_libraries( show2 ${OpenCV_LIBS} )
#target_link_libraries( combination ${OpenCV_LIBS} )
target_link_libraries( auto ${OpenCV_LIBS} )